--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,11 @@ edition = "2021"
 package = "libadwaita"
 version = "0.2.0"
 features = ["v1_2"]
+
+[dependencies.gtk]
+package = "gtk4"
+version = "0.5.1"
+
+[dependencies]
+glib = "0.16.2"
+gio = "0.16.2"
