--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "passmanager"
+name = "pass"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,3 +20,5 @@ version = "0.5.1"
 [dependencies]
 glib = "0.16.2"
 gio = "0.16.2"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
