--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ version = "0.5.1"
 [dependencies]
 glib = "0.16.2"
 gio = "0.16.2"
-serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.87"
+borsh = "0.9.3"
+cocoon = "0.3.2"
